<resources>
    <string name="app_name" translatable="false">Colorful Mind</string>
    <string name="rainbow">Rainbow</string>
    <string name="alphabet">Alphabet</string>
    <string name="numbers">Numbers</string>

    <string name="game_type">Type of the game</string>
    <string name="speed">Speed</string>

    <string name="logic_of_colors">Logic of colors</string>
    <string name="brain_training">Brain training</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="brown">Brown</string>
    <string name="cyan">Cyan</string>


    <string name="dialog_title">Pick the color</string>
    <string name="colors_not_set">You should set all colors</string>

    <string name="right">R</string>
    <string name="left">L</string>
    <string name="both">B</string>

    <string name="letter1">A</string>
    <string name="letter2">B</string>
    <string name="letter3">C</string>
    <string name="letter4">D</string>
    <string name="letter5">E</string>
    <string name="letter6">F</string>
    <string name="letter7">G</string>
    <string name="letter8">H</string>
    <string name="letter9">I</string>
    <string name="letter10">J</string>
    <string name="letter11">K</string>
    <string name="letter12">L</string>
    <string name="letter13">M</string>
    <string name="letter14">N</string>
    <string name="letter15">O</string>
    <string name="letter16">P</string>
    <string name="letter17">Q</string>
    <string name="letter18">R</string>
    <string name="letter19">S</string>
    <string name="letter20">T</string>
    <string name="letter21">U</string>
    <string name="letter22">V</string>
    <string name="letter23">W</string>
    <string name="letter24">X</string>
    <string name="letter25">Y</string>
    <string name="letter26">Z</string>
    <string name="letter27">A</string>
    <string name="letter28">I</string>
    <string name="letter29">Y</string>
    <string name="letter30">Q</string>
    <string name="letter31">W</string>

    <string name="help" translatable="false">Help</string>

    <string name="alphabet_help1">We all know that training is necessary for health and well-being. While doing sports or just warm-ups, we improve our bodies, becoming stronger and more enduring. In the same way, our brains need training for full-time work. And for sure, you have repeatedly heard how useful various puzzles and conundrums are to children and adults. There is even evidence that solving crosswords, sudoku and other logical puzzles protects from age-related brain diseases and allows you to keep your brain in good condition.</string>
    <string name="alphabet_help2">Invented by John Grinder, the founder of neuro-linguistic programming, develops your mental abilities in an exciting game form. It’s a program that displays two randomly selected letters of the alphabet on the screen during a given interval of time. The upper letter can be any letter and the player must say it aloud. The lower letter can only be "L", "R" or "B". When "L" appears, the player should raise his left hand, "R" - the right hand, "B" - both.</string>
    <string name="alphabet_help3">This game is similar to Alphabet;  just call the numbers and execute commands for the hands, raising your hands depending on the letter that appears.</string>
    <string name="alphabet_help4">The game Rainbow was invented by Russian coaches. In this game, the player is presented with a random sequence of words indicating colors - "red", "green", etc.; however, the color of the word may or may not coincide with the meaning of the word. The player should say the color of the word. But when the player sees the word “Rainbow”, they have to say this particular word instead of the color in which it is written. This prevents the player from finding strategies to see just words’ colors without reading them.</string>
    <string name="alphabet_help5">The speed of displaying letters/words can be adjusted by the player for all of these games.</string>

    <string name="logic_help1">This game is based on an older, paper based game called Bulls and Cows.</string>
    <string name="logic_help2">The player tries to guess the pattern of four colors , in both order and color, within twenty (or fifteen, or ten – depends on the game level) turns. Each guess is made by placing a row of colored squares on the decoding gameboard. Once placed, the game provides feedback by placing two numbers near the colored row with the guess. A black number with a “B” letter (like “bull”) at the top indicates the number of colored squares from the guess which is correct in both color and position; a grey number with a “C” letter (like “cow”) at the top - the number of correct colored squares placed in the wrong position.</string>
    <string name="logic_help3">Duplicates are allowed depending on player choice. Blanks are not allowed, and the player may not use blanks in a guess in order to establish the final code.</string>
    <string name="logic_help4">Example (duplicates are allowed)</string>
    <string name="logic_help5">If the hidden code is cyan-green-cyan-cyan and the player guesses cyan-cyan-green-green, the game will award “1B” for the correct cyan, “2C” for the correct green and the second cyan, placed in the wrong position, nothing for the second green.</string>
    <string name="logic_help6">Example (duplicates are not allowed)</string>
    <string name="logic_help7">If the hidden code is green-cyan-red-yellow and the player guesses green-yellow-cyan-purple, the game will provide “1B” for the correct orange and “2C” for the correct green-red placed in the wrong position, nothing for the black.</string>
    <string name="logic_help8">Once feedback is provided, another guess is made; guesses and feedback continue to alternate until either the player guesses correctly, or all allowed guesses are made.</string>
    <string name="logic_help9">If the hidden code is yellow-yellow-blue-blue and the player guesses yellow-yellow-yellow-blue, the game will award “3B” for the two correct yellows and one correct blue, nothing for the third yellow as there is not a third yellow in the code and no indication is given of the fact that the code also includes a second blue.</string>

    <string name="win_text">Great!\nYou are win!</string>
    <string name="looser_text">GAME OVER\n You are lost!</string>
    <string name="play_again_text">Do you want to play again?</string>
</resources>
